[tool.poetry]
name = "cairo-rs-py"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "cairo-rs-py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.9.14, <3.10"